# CubismNativeSamples

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  LICENSE.md  NOTICE.ja.md  NOTICE.md  README.ja.md  README.md
Samples/Cocos2d-x/Demo/: CMakeLists.txt
Samples/Cocos2d-x/Demo/Classes/: AppDelegate.cpp  AppDelegate.h  LAppAllocator.cpp  LAppAllocator.hpp  LAppDefine.cpp  LAppDefine.hpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppLive2DManagerInternal.cpp  LAppLive2DManagerInternal.h  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  LAppSprite.cpp  LAppSprite.hpp  LAppView.cpp  LAppView.hpp  SampleScene.cpp  SampleScene.h  TouchManager.cpp  TouchManager.h
Samples/Cocos2d-x/Demo/proj.android/: build.gradle  gradle.properties  settings.gradle
Samples/Cocos2d-x/Demo/proj.android-studio/: gradle.properties  settings.gradle
Samples/Cocos2d-x/Demo/proj.android-studio/app/: AndroidManifest.xml  build.gradle
Samples/Cocos2d-x/Demo/proj.android/app/: AndroidManifest.xml  build.gradle
Samples/Cocos2d-x/Demo/proj.ios/scripts/: proj_xcode
Samples/Cocos2d-x/Demo/proj.ios/src/: Info.plist
Samples/Cocos2d-x/Demo/proj.ios_mac/Demo.xcodeproj/: project.pbxproj
Samples/Cocos2d-x/Demo/proj.ios_mac/ios/: AppController.h  Info.plist  RootViewController.h
Samples/Cocos2d-x/Demo/proj.ios_mac/mac/: Info.plist  main.cpp
Samples/Cocos2d-x/Demo/proj.linux/scripts/: fix_libs  make_gcc
Samples/Cocos2d-x/Demo/proj.mac/scripts/: make_xcode  proj_xcode
Samples/Cocos2d-x/Demo/proj.mac/src/: Info.plist
Samples/Cocos2d-x/Demo/proj.win/scripts/: _msvc_common.bat  proj_msvc2015.bat  proj_msvc2017.bat  proj_msvc2019.bat  proj_msvc2022.bat
Samples/Cocos2d-x/Demo/proj.win/src/: game.rc  main.cpp  main.h  resource.h
Samples/Cocos2d-x/Demo/proj.win32/: Demo.sln  Demo.vcxproj  Demo.vcxproj.filters  game.rc  main.cpp  main.h  resource.h
Samples/D3D11/Demo/proj.d3d11.cmake/: CMakeLists.txt  _msvc_common.bat  nmake_2017_x86.bat  nmake_msvc2015.bat  nmake_msvc2019.bat  proj_2013_x86.bat
Samples/D3D11/Demo/proj.d3d11.cmake/Demo/: LAppAllocator.cpp  LAppDefine.cpp  LAppDefine.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  LAppSprite.cpp  LAppSprite.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  LAppView.cpp  LAppView.hpp  TouchManager.cpp  main.cpp
Samples/D3D11/Demo/proj.d3d11.cmake/scripts/: _msvc_common.bat  nmake_msvc2013.bat  nmake_msvc2015.bat
Samples/D3D11/Demo/proj.d3d11.cmake/src/: CMakeLists.txt  CubismDirectXRenderer.cpp  CubismDirectXRenderer.hpp  CubismDirectXView.cpp  CubismDirectXView.hpp  CubismSampleViewMatrix.cpp  CubismSprite.cpp  CubismSprite.hpp  CubismSpriteShader.cpp  CubismSpriteShader.hpp  CubismTextureManager.cpp  CubismTextureManager.hpp  CubismUserModelExtend.cpp  CubismUserModelExtend.hpp  LAppAllocator.cpp  LAppDefine.cpp  LAppDefine.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  LAppSprite.cpp  LAppSprite.hpp  LAppSpriteShader.cpp  LAppSpriteShader.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  LAppView.cpp  LAppView.hpp  MouseActionManager.cpp  MouseActionManager.hpp  main.cpp  mainMinimum.cpp
Samples/D3D9/Demo/proj.d3d9.cmake/: CMakeLists.txt  _msvc_common.bat  nmake_2015_x64.bat  nmake_2017_x64.bat  nmake_msvc2017.bat  proj_2013_x64.bat  proj_2015_x64.bat  proj_2017_x64.bat  proj_2017_x86.bat  proj_msvc2017.bat  proj_msvc2019.bat
Samples/D3D9/Demo/proj.d3d9.cmake/Demo/: LAppAllocator.cpp  LAppAllocator.hpp  LAppDefine.cpp  LAppDefine.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  LAppSprite.cpp  LAppSprite.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  LAppView.cpp  LAppView.hpp  TouchManager.cpp  TouchManager.hpp  main.cpp
Samples/D3D9/Demo/proj.d3d9.cmake/scripts/: _msvc_common.bat  nmake_msvc2017.bat  nmake_msvc2019.bat  proj_msvc2013.bat  proj_msvc2015.bat  proj_msvc2017.bat
Samples/D3D9/Demo/proj.d3d9.cmake/src/: CMakeLists.txt  CubismDirectXRenderer.cpp  CubismDirectXRenderer.hpp  CubismDirectXView.cpp  CubismDirectXView.hpp  CubismSampleViewMatrix.hpp  CubismSprite.cpp  CubismSprite.hpp  CubismSpriteShader.cpp  CubismSpriteShader.hpp  CubismTextureManager.cpp  CubismTextureManager.hpp  CubismUserModelExtend.cpp  CubismUserModelExtend.hpp  LAppDefine.cpp  LAppDefine.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  LAppSprite.cpp  LAppSprite.hpp  LAppSpriteShader.cpp  LAppSpriteShader.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  LAppView.cpp  LAppView.hpp  MouseActionManager.hpp  main.cpp  mainMinimum.cpp
Samples/Metal/Demo/proj.ios.cmake/: CMakeLists.txt
Samples/Metal/Demo/proj.ios.cmake/scripts/: proj_xcode
Samples/Metal/Demo/proj.ios.cmake/src/: AppDelegate.mm  CMakeLists.txt  Info.plist  LAppAllocator.h  LAppAllocator.mm  LAppDefine.h  LAppDefine.mm  LAppLive2DManager.h  LAppLive2DManager.mm  LAppModel.h  LAppModel.mm  LAppPal.h  LAppPal.mm  LAppSprite.h  LAppSprite.mm  LAppTextureManager.h  LAppTextureManager.mm  MetalConfig.h  MetalUIView.h  MetalUIView.m  MetalView.h  MetalView.m  TouchManager.mm  ViewController.h  ViewController.mm
Samples/OpenGL/Demo/proj.android/Demo/: CMakeLists.txt  build.gradle
Samples/OpenGL/Demo/proj.ios.cmake/: CMakeLists.txt
Samples/OpenGL/Demo/proj.ios.cmake/scripts/: proj_xcode
Samples/OpenGL/Demo/proj.ios.cmake/src/: AppDelegate.mm  (+20 more)
Samples/OpenGL/Demo/proj.linux.cmake/: CMakeLists.txt  make_gcc.sh
Samples/OpenGL/Demo/proj.mac.cmake/: CMakeLists.txt  buildXcode.sh  build_xcode.sh  make_xcode.sh  proj_xcode.sh
Samples/OpenGL/Demo/proj.win.cmake/: CMakeLists.txt  nmake_2013_x64.bat  nmake_2013_x86.bat  nmake_2015_x86.bat  nmake_msvc2013.bat  proj_2015_x86.bat  proj_msvc2013.bat  proj_msvc2015.bat
Samples/Vulkan/Demo/proj.linux.cmake/: CMakeLists.txt
(+413 files in other folders)
